k8s/pricing-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pricing-service
  namespace: scrapzee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pricing-service
  template:
    metadata:
      labels:
        app: pricing-service
    spec:
      containers:
      - name: pricing-service
        image: sagar1003/scrapzee-pricing-api:v1
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: pricing-service
  namespace: scrapzee
spec:
  selector:
    app: pricing-service
  ports:
  - port: 80
    targetPort: 5002
