k8s/user-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: scrapzee
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
        - name: user-service
          image: sagar1003/scrapzee-user-api:v1
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: scrapzee
spec:
  selector:
    app: user-service
  ports:
    - port: 80
      targetPort: 5003
